Parse customModule from storyboard files, removing the need for the “--imports” flag

--- a/UnitTests/fixtures/Storyboards-OSX/AdditionalImport-osx.storyboard
+++ b/UnitTests/fixtures/Storyboards-OSX/AdditionalImport-osx.storyboard
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.Storyboard.XIB" version="3.0" toolsVersion="11542" systemVersion="16B2555" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.Cocoa.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16C67" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="11542"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="11762"/>
     </dependencies>
     <scenes>
         <!--Window Controller-->
         <scene sceneID="eNa-6E-hop">
             <objects>
-                <windowController storyboardIdentifier="Preferences" id="3Gn-1I-HiJ" customClass="DBPrefsWindowController" sceneMemberID="viewController">
+                <windowController storyboardIdentifier="Preferences" id="3Gn-1I-HiJ" customClass="DBPrefsWindowController" customModule="DBPrefsWindowController" sceneMemberID="viewController">
                     <window key="window" title="Window" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" oneShot="NO" releasedWhenClosed="NO" showsToolbarButton="NO" visibleAtLaunch="NO" frameAutosaveName="" animationBehavior="default" id="sw7-rd-HiT">
                         <windowStyleMask key="styleMask" titled="YES" closable="YES" miniaturizable="YES" resizable="YES"/>
                         <windowPositionMask key="initialPositionMask" leftStrut="YES" rightStrut="YES" topStrut="YES" bottomStrut="YES"/>
