--- a/UnitTests/fixtures/Storyboards-iOS/AdditionalImport.storyboard
+++ b/UnitTests/fixtures/Storyboards-iOS/AdditionalImport.storyboard
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11542" systemVersion="16B2555" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="sCq-1b-U1T">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16C67" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="sCq-1b-U1T">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11524"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--Location Picker View Controller-->
         <scene sceneID="1iN-a4-Pl6">
             <objects>
-                <viewController id="sCq-1b-U1T" customClass="LocationPickerViewController" sceneMemberID="viewController">
+                <viewController id="sCq-1b-U1T" customClass="LocationPickerViewController" customModule="LocationPicker" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="AF1-Pm-1gV"/>
                         <viewControllerLayoutGuide type="bottom" id="E3P-fP-oWf"/>
@@ -23,6 +23,9 @@
                     </view>
                     <navigationItem key="navigationItem" id="KZX-mS-tuT"/>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
+                    <connections>
+                        <segue destination="TuC-8Y-xZ9" kind="custom" identifier="test" customClass="SlideDownSegue" customModule="CustomSegue" id="Ac7-Re-xKv"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="v2R-VI-fT0" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -31,7 +34,7 @@
         <!--Text View Controller-->
         <scene sceneID="yg3-tg-GNr">
             <objects>
-                <viewController storyboardIdentifier="SomeSlackViewControllerInstance" id="TuC-8Y-xZ9" customClass="SLKTextViewController" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="SomeSlackViewControllerInstance" id="TuC-8Y-xZ9" customClass="SLKTextViewController" customModule="SlackTextViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="M6w-YY-zkB"/>
                         <viewControllerLayoutGuide type="bottom" id="DvD-4b-cvd"/>
